fix: dockerfile to work with the Jena 5.0.0